force-app/main/default/objects/PurchaseExperienceWork__c/PurchaseExperienceWork__c.object-meta.xml
<CustomObject>
    <label>買取実績（ワーク）</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>買取実績（ワーク）No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>