force-app/main/default/objects/PurchaseExperienceWork__c/fields/BudgetActualType__c.field-meta.xml
<CustomField>
    <fullName>BudgetActualType__c</fullName>
    <label>予実区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>