force-app/main/default/objects/PurchaseExperienceWork__c/fields/CompanyType__c.field-meta.xml
<CustomField>
    <fullName>CompanyType__c</fullName>
    <label>法人区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>