force-app/main/default/objects/PurchaseExperienceWork__c/fields/Lot_number__c.field-meta.xml
<CustomField>
    <fullName>Lot_number__c</fullName>
    <description>集計管理よりロット番号(SF)と連携。山本</description>
    <label>ロット番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>