force-app/main/default/objects/PurchaseExperienceWork__c/fields/Past_adjustment_details__c.field-meta.xml
<CustomField>
    <fullName>Past_adjustment_details__c</fullName>
    <description>仕入詳細と売上詳細を繋げた状態で集計管理から取込。山本</description>
    <label>過去調整詳細</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>