force-app/main/default/objects/PurchaseExperienceWork__c/fields/Profits__c.field-meta.xml
<CustomField>
    <fullName>Profits__c</fullName>
    <label>利益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>