force-app/main/default/objects/PurchaseExperienceWork__c/fields/PurchaseAmount__c.field-meta.xml
<CustomField>
    <fullName>PurchaseAmount__c</fullName>
    <label>仕入金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>