force-app/main/default/objects/PurchaseExperienceWork__c/fields/PurchaseOpportunity__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>買取商談</label>
    <referenceTo>PurchaseOpportunity__c</referenceTo>
    <relationshipLabel>買取実績（ワーク）</relationshipLabel>
    <relationshipName>OpportunityPurchaseExperience</relationshipName>
    <type>Lookup</type>
</CustomField>