force-app/main/default/objects/PurchaseExperienceWork__c/fields/SaleDecisionDate__c.field-meta.xml
<CustomField>
    <fullName>SaleDecisionDate__c</fullName>
    <description>山本</description>
    <label>売却日</label>
    <type>Date</type>
</CustomField>