force-app/main/default/objects/PurchaseExperienceWork__c/fields/Sales_staff__c.field-meta.xml
<CustomField>
    <fullName>Sales_staff__c</fullName>
    <description>集計管理より営業担当(SF)と連携。山本</description>
    <label>営業担当</label>
    <length>20</length>
    <type>Text</type>
</CustomField>