force-app/main/default/objects/PurchaseExperienceWork__c/fields/SalesAmount__c.field-meta.xml
<CustomField>
    <fullName>SalesAmount__c</fullName>
    <label>売上金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>