force-app/main/default/objects/PurchaseExperienceWork__c/fields/SalesDate__c.field-meta.xml
<CustomField>
    <fullName>SalesDate__c</fullName>
    <label>売上日</label>
    <type>Date</type>
</CustomField>