force-app/main/default/objects/PurchaseExperienceWork__c/fields/UserCode__c.field-meta.xml
<CustomField>
    <fullName>UserCode__c</fullName>
    <label>社員コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>